# messy-stuff

./: .gitignore  Dockerfile  Dockerfile_huggingface  README.md  alignment.py  cam.py  cam_hands_only.py  cam_mediapipe.py  cam_mediapipe_singlehand.py  describe_fingerspelling5.py  eval_fingerspelling.py  explore_alignment.py  explore_hand_alignment.py  explore_upscaling.py  explore_urv_problem.py  fingerspelling5_to_pandas_handlandmarks.py  fingerspelling_to_pandas_singlehand_landmarks.py  hand_description.py  indexing_asl_fingerspelling.py  indexing_asl_signs.py  inference.py  pipeline_fingerspelling5.py  pipeline_frame.py  pipeline_pyg_augmentation.py  pipeline_ram_data.py  pipeline_single_frame.py  pyproject.toml  record_data.py  recorded_image_to_landmarks.py  recording_letters.py  requirements.txt  save_train_data.py  script_frame_wise_data_split.py  test_pipeline_frame.py  train.csv  train.py  train_fingerspelling.py  train_inmemory.py  understand_shuffle.py  visualize_fingerspelling5_landmarks.py  (+7 more)
.devcontainer/: devcontainer.json
apps/: compare_predictions.py  evaluate_anomaly_labeling.py  visualize_fingerspelling5.py  visualize_point_clouds.py  visualize_videos.py
configs/: metric_computation.yaml  predict_fingerspelling5.yaml  train_fingerspelling5.yaml
data/: .gitignore
scripts/: compute_fingerspelling5_metrics.py  compute_metrics.py  create_fingerspelling5_dummy.py  create_fingerspelling5_dummy_dataquality.py  create_fingerspelling5_dummy_images.py  create_fingerspelling5_splits.py  create_fingerspelling_training_subset.py  create_image_files_csv.py  (+6 more)
(+52 files in other folders)
