[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fmp"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["torch", "tensorboard"]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["black", "mypy"]
test = ["pytest"]

# [tool.mypy]
# disallow_untyped_defs = true
# pretty = true
# show_absolute_path = true
# show_error_context = true
# show_column_numbers = true
# show_error_codes = true
# error_summary = true
# files = "src"
# allow_redefinition = true

[tool.pytest.ini_options]
testpaths = ["tests"]
